Entidade, controller e repositório de User

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=cinevault
 
 feign.api.token=
+spring.datasource.url=jdbc:postgresql://localhost:5432/cinevault
+spring.datasource.username=postgres
+spring.datasource.password=24122004
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
